Task and report sumbit for tasks implementation
